# studio

./: #setupProxy.js#  .babelrc  .codecov.yml  .coveragerc  .dockerignore  .env  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.dockerfile  .gitpod.yml  .nycrc  .nycrc.json  .prettierignore  .prettierrc  CONTRIBUTING.md  CYPRESS.md  Dockerfile  LICENSE  MC_STATUS_CODES.yml  README.md  STATUS_CODES.json  STATUS_CODES.yml  add_submodules.sh  applitools.config.js  benchmark.py  benchmark.txt  bruh.json  check-dependencies  check-dependencies.ps1  checking_npm_python_package_script.sh  close-all-rq-workers.py  codecov.yml  components.json  config-overrides.js  cy_test_from_example_app.py  cypress.config.ts  (+73 more)
PYTHON/blocks/: .gitignore  README.md  pyproject.toml
PYTHON/blocks/.github/workflows/: block-quality-check.yml
PYTHON/blocks/blocks/AI_ML/: summary.md
PYTHON/blocks/blocks/AI_ML/AUDIO/SPEECH_2_TEXT/: SPEECH_2_TEXT.py  app.json  block_data.json
PYTHON/blocks/blocks/AI_ML/CLASSIFICATION/ONE_HOT_ENCODING/: ONE_HOT_ENCODING.py
PYTHON/blocks/blocks/AI_ML/CLASSIFICATION/SUPPORT_VECTOR_MACHINE/: block_data.json
PYTHON/blocks/blocks/AI_ML/CLASSIFICATION/TORCHSCRIPT_CLASSIFIER/: app.json
PYTHON/blocks/blocks/AI_ML/IMAGE_CAPTIONING/NLP_CONNECT_VIT_GPT2/: app.json  block_data.json
PYTHON/blocks/blocks/AI_ML/IMAGE_CLASSIFICATION/HUGGING_FACE_PIPELINE/: HUGGING_FACE_PIPELINE.py  HUGGING_FACE_PIPELINE_test_.py
PYTHON/blocks/blocks/AI_ML/LOAD_MODEL/ONNX_MODEL/: ONNX_MODEL.py  block_data.json
PYTHON/blocks/blocks/AI_ML/NLP/COUNT_VECTORIZER/: COUNT_VECTORIZER_test_.py
PYTHON/blocks/blocks/AI_ML/OBJECT_DETECTION/OBJECT_DETECTION/: app.json
PYTHON/blocks/blocks/AI_ML/PREDICT_TIME_SERIES/PROPHET_PREDICT/: PROPHET_PREDICT_test_.py
PYTHON/blocks/blocks/AI_ML/REGRESSION/LEAST_SQUARES/: LEAST_SQUARES.py
PYTHON/blocks/blocks/AI_ML/TEXT_SUMMARIZATION/BART_LARGE_CNN/: BART_LARGE_CNN.py
PYTHON/blocks/blocks/COMPUTER_VISION/: summary.md
PYTHON/blocks/blocks/COMPUTER_VISION/CHANNEL_MERGE/: example.md
PYTHON/blocks/blocks/COMPUTER_VISION/CHANNEL_SPLIT/: CHANNEL_SPLIT.py
PYTHON/blocks/blocks/COMPUTER_VISION/EDGE_DETECTION/: app.json
PYTHON/blocks/blocks/COMPUTER_VISION/IMAGE_SMOOTHING/: app.json  example.md
PYTHON/blocks/blocks/COMPUTER_VISION/LOGARITHMIC_ADJUSTMENT/: LOGARITHMIC_ADJUSTMENT.py  block_data.json
PYTHON/blocks/blocks/CONTROL_FLOW/CONDITIONALS/CONDITIONAL/: block_data.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/AND/: AND_test_.py  app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/EXCLUSIVE_OR/: app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/IMPLIES/: IMPLIES.py  app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/NOT/: app.json  block_data.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/NOT_AND/: NOT_AND.py  app.json  example.md
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/NOT_OR/: NOT_OR.py  app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOGICAL_OPERATORS/OR/: app.json  block_data.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOOPS/APPEND/: app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOOPS/LOOP/: LOOP.py
PYTHON/blocks/blocks/CONTROL_FLOW/LOOP_TOOLS/BREAK/: app.json
PYTHON/blocks/blocks/CONTROL_FLOW/LOOP_TOOLS/LOOP_INDEX/: app.json  example.md
PYTHON/blocks/blocks/CONTROL_FLOW/TIMERS/TIMER/: TIMER.py
PYTHON/blocks/blocks/DATA/EXPORT/EXPORT_CSV/: EXPORT_CSV.py
PYTHON/blocks/blocks/DATA/EXPORT/EXPORT_JSON/: EXPORT_JSON.py  block_data.json
PYTHON/blocks/blocks/DEBUGGING/DATACONTAINER_TYPE/: DATACONTAINER_TYPE.py  DATACONTAINER_TYPE_test_.py  app.json  block_data.json
PYTHON/blocks/blocks/DEBUGGING/DC_CONTENT_TYPE/: DC_CONTENT_TYPE.py  DC_CONTENT_TYPE_test_.py  block_data.json
PYTHON/blocks/blocks/DEBUGGING/PRINT_DATACONTAINER/: PRINT_DATACONTAINER.py  PRINT_DATACONTAINER_test_.py  block_data.json
PYTHON/blocks/blocks/DSP/FFT/: FFT_test_.py
PYTHON/blocks/blocks/DSP/PEAK_DETECTION/: PEAK_DETECTION.py  PEAK_DETECTION_test_.py
PYTHON/blocks/blocks/DSP/PID/: block_data.json
PYTHON/blocks/blocks/DSP/SAVGOL/: block_data.json
PYTHON/blocks/blocks/HARDWARE/AUDIO/RECORD_AUDIO/: RECORD_AUDIO.py  block_data.json  example.md
PYTHON/blocks/blocks/MATH/ARITHMETIC/ABS/: app.json
PYTHON/blocks/blocks/MATH/ARITHMETIC/ADD/: app.json
PYTHON/blocks/blocks/MATH/ARITHMETIC/MULTIPLY/: MULTIPLY.py  app.json  example.md
PYTHON/blocks/blocks/MATH/ARITHMETIC/SUBTRACT/: SUBTRACT.py  SUBTRACT_test_.py  app.json  example.md
PYTHON/blocks/blocks/MATH/CALCULUS/DIFFERENTIATE/: DIFFERENTIATE.py  app.json
PYTHON/blocks/blocks/MATH/CALCULUS/DOUBLE_DEFINITE_INTEGRAL/: DOUBLE_DEFINITE_INTEGRAL.py  app.json
PYTHON/blocks/blocks/MATH/CALCULUS/DOUBLE_INDEFINITE_INTEGRAL/: app.json  block_data.json
PYTHON/blocks/blocks/MATH/CALCULUS/INTEGRATE/: app.json
PYTHON/blocks/blocks/NUMPY/: summary.md
PYTHON/blocks/blocks/NUMPY/LINALG/: __init__.py
PYTHON/blocks/blocks/NUMPY/LINALG/DET/: DET.py  block_data.json
PYTHON/blocks/blocks/NUMPY/LINALG/EIGH/: EIGH.py
PYTHON/blocks/blocks/NUMPY/LINALG/INV/: INV_test_.py  block_data.json
PYTHON/blocks/blocks/NUMPY/LINALG/SVD/: block_data.json
PYTHON/blocks/blocks/SCIPY/STATS/: __init__.py
PYTHON/blocks/cli/: constants.py
PYTHON/blocks/cli/utils/: markdown_helper.py
PYTHON/blocks/docs/: package.json
(+5427 files in other folders)
