[tool.poetry]
name = "flojoy-studio"
version = "0.2.2"
description = ""
authors = [
  "Jack Palmer <jp@flojoy.io>",
  "Joey Yu <joey@flojoy.io>",
  "Jeff Zhang <jeff@flojoy.io>",
  "Syed Mahbub <smahmed776@gmail.com>",
  "Dallas Strandell <dalstrande@outlook.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
flojoy = { path = "pkgs/flojoy", develop = true }
fastapi = "^0.104.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
debugpy = "^1.8.0"
opencv-python-headless = "^4.8.1.78"
pyserial = "^3.5"
docstring-parser = "^0.15"
keyring = "^24.2.0"
pyvisa-py = "^0.7.0"
pyvisa = "^1.13.0"
pyusb = "^1.2.1"
tm-devices = "^1.1.0"
watchfiles = "^0.21.0"
pytest = "^7.4.4"
pytest-json-report = "^1.5.0"
httpx = "^0.26.0"
nidaqmx = "^0.9.0"
nidmm = "^1.4.7"
nimodinst = "^1.4.7"
flojoy-cloud = "^0.1.1"
tinymovr = "^1.6.5"

[tool.poetry.group.blocks.dependencies]
scikit-image = "^0.22.0"
lxml = "^4.9.3"
boto3 = "^1.33.8"
moto = "^4.2.11"
openpyxl = "^3.1.2"
sympy = "^1.12"
xlrd = "^2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.1.5"
typer = { extras = ["all"], version = "^0.9.0" }
python-frontmatter = "^1.0.1"
python-can = "^4.3.1"

[tool.poetry.group.hardware]
optional = true

[tool.poetry.group.hardware.dependencies]
mecademicpy = "^2.0.0"
phidget22 = "^1.17.20231004"
labjackpython = "^2.1.0"
ticlib = "^0.2.2"

[tool.poetry.group.ai-ml]
optional = true

[tool.poetry.group.ai-ml.dependencies]
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
