[tool.poetry]
name = "blocks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
scipy = "^1.11.3"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.1"
numpy = "^1.26.1"
mecademicpy = "^1.4.0"
boto3 = "^1.28.64"
keyring = "^24.2.0"
pandas = {extras = ["parquet"], version = "^2.1.1"}
pyvisa-sim = "^0.5.1"
ticlib = "^0.2.2"
lxml = "^4.9.3"
labjackpython = "^2.1.0"
moto = "^4.2.6"
phidget22 = "^1.17.20231004"
pyserial = "^3.5"
pyyaml = "^6.0.1"
openpyxl = "^3.1.2"
opencv-python-headless = "^4.8.1.78"
sympy = "^1.12"
xlrd = "^2.0.1"
flojoy = "^0.1.16"
qcodes = "^0.40.0"
python-frontmatter = "^1.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
typer = {extras = ["all"], version = "^0.9.0"}
docstring-parser = "^0.15"
pytest = "^7.4.2"
ruff = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
